# sTerminal

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: prd.md  tasks.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: layout.rs  mod.rs  terminal.rs
src-tauri/src/pty/: manager.rs  mod.rs  process.rs
src-tauri/src/shell/: detector.rs  mod.rs
src-tauri/src/store/: layout_store.rs  mod.rs
src/components/: DropOverlay.tsx  TabBar.tsx  Toast.tsx
src/components/commands/: CommandManagerDrawer.tsx
src/components/layout/: LayoutRenderer.tsx  PanelContainer.tsx
src/components/layout-manager/: LayoutListItem.tsx  LayoutManagerDrawer.tsx  SaveLayoutDialog.tsx
src/components/settings/: AppSettingsDialog.tsx
src/components/terminal/: TerminalContextMenu.tsx  TerminalHeader.tsx  TerminalPane.tsx  TerminalSettingsDialog.tsx
src/components/titlebar/: TitleBar.tsx
src/hooks/: useKeyboardShortcuts.ts  useTerminal.ts
src/ipc/: layoutApi.ts  terminalApi.ts
src/store/: layoutStore.ts  panelStore.ts  settingsStore.ts
src/styles/: global.css  tabbar.css  terminal.css
src/terminal/: terminalInstances.ts
src/types/: layout.ts  terminal.ts
src/utils/: layoutTree.ts  shellIcons.ts  tabDragState.ts  updateChecker.ts
